# KCaptcha

./: LICENSE  README.md  pyproject.toml
kcaptcha.egg-info/: PKG-INFO  SOURCES.txt
scripts/: quick_train_test.py
src/kcaptcha/: __init__.py
src/kcaptcha.egg-info/: PKG-INFO  SOURCES.txt
src/kcaptcha/datasets/: __init__.py  dataset.py
src/kcaptcha/models/: __init__.py  transformers.py
src/kcaptcha/scripts/: quick_train_test.py
