[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcaptcha"
version = "0.1.0"
description = "Un package Python pour générer et reconnaître des CAPTCHAs."
authors = [{ name = "Louca Malerba", email = "louca.malerba@student-cs.fr" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/malerbe/kcaptcha"